<resources>
    <string name="app_name">cst438_s21_proj01_group10</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="search_player">Search Player</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="settings">Settings</string>
    <string name="search_game">Search Game</string>
    <string name="add_team">Add Team</string>
    <string name="add_player">Add Player</string>
    <string name="search_player_search">Search Player Name...</string>
    <string name="add">Add</string>
    <string name="my_player">My Players</string>
    <string name="user_settings">User Settings</string>
    <string name="password">New Password</string>
    <string name="save">Save Changes</string>
    <string name="edit_fav">Edit Favorites</string>
    <string name="go">Go</string>
    <string name="delete">Delete</string>
    <string name="enter_favorite_id">Enter favorite ID</string>
</resources>